// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Formatting elodin syntax should return beautiful syntax 1`] = `
"variant Mode {
  Dark
  Light
}

fragment Flex {
  flexGrow: 1
  flexDirection: row
}

view Button {
  justifyContent: flexStart
  __borderWidth: .3
  backgroundColor: rgb(255 200 155)
  [Type=Primary] {
    paddingLeft: 20
    [Mode=Dark] {
      backgroundColor: rgb(0 128 0)
    }
  }
}

text Label {
  lineHeight: $lineHeight
  fontSize: 20
  [@hover] {
    color: rgb(255 0 0)
  }
  [@minWidth=320] {
    color: rgb(0 0 255)
    [@hover] {
      color: rgb(0 128 0)
    }
  }
}"
`;

exports[`Formatting elodin syntax should return beautiful syntax with custom syntax 1`] = `
Object {
  "code": "variant Mode {
  Dark
  Light
}

fragment Flex {
  flexGrow: 1
  flexDirection: row
}

view Button {
  justifyContent: flexStart
  __borderWidth: .3
  backgroundColor: rgb(255 200 155)
  [Type=Primary] {
    paddingLeft: 20
    [Mode=Dark] {
      backgroundColor: rgb(0 128 0)
    }
  }
}

text Label {
  lineHeight: $lineHeight
  fontSize: 20
  [@hover] {
    color: rgb(255 0 0)
  }
  [@minWidth=320] {
    color: rgb(0 0 255)
    [@hover] {
      color: rgb(0 128 0)
    }
  }
}",
  "errors": Array [],
}
`;
